--- a/launch.html
+++ b/launch.html
@@ -9,7 +9,7 @@
         <script>
             FHIR.oauth2.authorize({
                 'clientId': "diabetes-dashboard",
-                'scope': "patient/Patient.read patient/Observation.read launch/patient",
+                'scope': "launch openid fhirUser patient/Patient.read patient/Observation.read launch/patient",
                 'redirectUri': "index.html"
             });
         </script>
