changes to divs: xit exit

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div id="patient">Loading...</div>
         <br/>
         <h3 id="name">Your Patient's A1c Values</h3>
-        <div id="a1c-chart" style="width:600px;height:400px;"></div>
+        <div id="a1c-chart" style="width:600px;height:400px;">A1c Values here</div>
         <br/>
         <h3 id="name">Your Patient's Blood Glucose Values</h3>
-        <div id="glucose-chart" style="width:600px;height:400px;"></div>
+        <div id="glucose-chart" style="width:600px;height:400px;">BG Values here</div>
         <br/>
         <script>
             FHIR.oauth2.ready().then(function(client) {
