playing with index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 if (values.length === 0)
                     return a1cReadings.innerHTML = "No A1C observations found.";
                 
-                a1cReadings.style.display = "none";
+                // a1cReadings.style.display = "none";
 
                 Plotly.newPlot(a1cReadings, {
                     data: [{
