--- a/launch.html
+++ b/launch.html
@@ -9,7 +9,7 @@
         <script>
             FHIR.oauth2.authorize({
                 'clientId': "diabetes-dashboard",
-                'scope': "launch openid fhirUser patient/*.read launch/patient",
+                'scope': "launch patient/*.read",
                 'redirectUri': "index.html"
             });
         </script>
