--- a/launch.html
+++ b/launch.html
@@ -8,7 +8,7 @@
     <body>
         <script>
             FHIR.oauth2.authorize({
-                'clientId': "diabetes-dashboard",
+                'client_id': "diabetes-dashboard",
                 'scope': "launch patient/*.read",
                 'redirectUri': "index.html"
             });
