--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Diabetic Dashboard</title>
-        <script src="fhir-client.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <style>
             #patient {
