made some changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             FHIR.oauth2.ready( pullA1cValues, pullGlucoseValues, showError );
 
-            var patientHeader = document.getElementById("patient");
+            //var patientHeader = document.getElementById("patient");
             var a1cReadings = document.getElementById("a1c-chart");
             var glucoseReadings = document.getElementById("glucose-chart");
 
