made some changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             FHIR.oauth2.ready().then(function(client) {
 
             // Render the current patient (or any error)
-            smart.patient.read().then(
+            client.patient.read().then(
                 function(pt) {
                     document.getElementById("patient").innerText = JSON.stringify(pt, null, 4);
                 },
