made some changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3 id="name">Your Patient's Blood Glucose Values</h3>
         <div id="glucose-chart" style="width:600px;height:400px;">BG Values here</div>
         <br/>
-        <script>
+        <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
 
             // Render the current patient (or any error)
