made some changes

--- a/launch.html
+++ b/launch.html
@@ -8,9 +8,9 @@
     <body>
         <script>
             FHIR.oauth2.authorize({
-                'clientId': "diabetes-dashboard",
-                'scope': "launch openid fhirUser patient/*.read",
-                'redirectUri': "index.html"
+                clientId: "diabetes-dashboard",
+                scope: "launch openid fhirUser patient/*.read",
+                redirectUri: "index.html"
             });
         </script>
     </body>
