--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         document.getElementById("patient").innerText = JSON.stringify(pt, null, 4);
                     },
                 );
-            }
+            }).catch(console.error);
 /*
             FHIR.oauth2.ready( pullA1cValues, pullGlucoseValues, showError );
 
